prevent form error messages from wrapping

--- a/app/assets/stylesheets/_module.scss
+++ b/app/assets/stylesheets/_module.scss
@@ -184,6 +184,7 @@
  position: absolute;
   left: -8px;
   bottom: -32px;
+  white-space: nowrap;
  visibility: hidden;
  z-index: 100;
 }
